--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="half-width-view-port">
             <div id="main-graphic-holder">
-                <img src="https://lh3.googleusercontent.com/HEfygXo__Sghf188GHManajQ5YEgm3IHpE4hqHjjyuzIvwGKl1MIOdlRBVNGZ0-ysBk8Lc-NWHBLQHE4AkORL7kJuf0zkV_kHQMmozTrzeE6VUkrJPrYFtAsBKwRBFyXZpWSB8ZwcB_Itw-T70ZUzQW3keWI25HlkABQ5C2JbMA6_6yDb1JUUqUwlKsUT6DTILQCgolMdemeK9HDvWdoWo9C3yaIWRGltLRML6jHCHvk0LIft-a1Lc2hIWtmzyj5rHCwnhWlIMu4Vn7mvL8qdvroQV1htl7qmbAhDgptAhNQ05LE0kNn5Xa4NmmHgikRgCIq0mw0h2XRiAV3quEr1P_JVCjZIVX7KMXPy2YcikjXVHFy4zagbv1m7XsnvepvuncdDxT7SDzNmi7IllBGRs7B4J2s9oRKMc1fq3QdwByEPOrqfxWaoJ1PZAR8CQ8gejzfnhEuvF7ocAy6kCcxKGDZkdDSPFEBzu84fQQWpVuft1ehI92axE7YMiZywq4CGC95I1fP62afYJXrJWFXcTWzXVqUmUqrOGCznXlGdc_qq2iMgUgsTT0VZLwKpVHT_k195FAMeDuUOJvQ-pbZnX5G-3CA-vzdQzcMZmWfejuoprtoGIt_yDOTn1tZgpqhiqVkZVFPDxCUJftAvqe2XwrS-rN7IDuC9nYLhgME8G3Iv5FDEOyE_s7_OLNINVvUYlE0qYGVDqrhTnrteDyKSnSCLvzSBAADZlW_ZCPYTl2vbQtxrh7tNlU-0ASqlXYgg9Xb1fRRkdE9h_aLt2uxDjcJgD_HCTi8XHLD3RaPeA13r_nZJlxsJO4_q2m_jyOmBxXKYbVp9ci_P1eZprnVSZ0kcHqh-ZBFGkdbQfUreQuj4L6XYca2nXZr934WSmekKzTu3ngcICvttxJehHeJkK3bhpOl5r6-l6IXW9CWC3AT=s572-no?authuser=0" alt="Woman working at computer graphic, credits to Canva and accociates.">
+                <img src="https://lh3.googleusercontent.com/FJ6yR0fF1_VkQo3ibV-vuHLXL1DyiaipnQTG3lTAc3gfyoG-v_qqdIj5_xrxBh7lutGZHRCJidGKHmjky_1VB5yezquOoUOCOr3-WJiTsN4jUAhBwOu6ZtIwAB1cYHxFVmNcWiOnnw=w1920-h1080" width="575" alt="Woman working at computer graphic, credits to Canva and accociates.">
     
                 <p id="main-graphic-blurb">I'm a full stack python developer, focused on creating effective dynamic applications.</p>
             </div>
