--- a/index.html
+++ b/index.html
@@ -367,11 +367,10 @@
         <div id="email-me-container" class="container">
             <h1>Email Me</h1>
             <hr>
-            <form action="submit">
-
-                <input type="text" placeholder="Name" maxlength="40">
-                <input type="text" placeholder="Email" maxlength="40">
-                <textarea name="message" id="emailMessage" cols="30" rows="10" placeholder="Message..."></textarea>
+            <form action="https://formsubmit.co/AlyssaBlackDev@gmail.com" method="POST">
+                <input type="text" name="name" placeholder="Name" maxlength="40" required>
+                <input type="email" name="email" placeholder="Email Address" maxlength="40" required>
+                <textarea name="message" id="emailMessage" cols="30" rows="10" placeholder="Message..." required></textarea>
 
                 <button type="submit">Send</button>
             </form>
