--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./resetCss.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../styles/resetCss.css">
+    <link rel="stylesheet" href="../styles/index.css">
 
     <!-- FONTS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Coiny">
@@ -367,10 +367,17 @@
         <div id="email-me-container" class="container">
             <h1>Email Me</h1>
             <hr>
-            <form action="https://formsubmit.co/AlyssaBlackDev@gmail.com" method="POST">
+            <form action="https://formsubmit.co/badd209490fa29db479c64a80f0ebf09" method="POST">
                 <input type="text" name="name" placeholder="Name" maxlength="40" required>
                 <input type="email" name="email" placeholder="Email Address" maxlength="40" required>
+                <input type="hidden" name="_subject" value="!!!Emailed Through portfolio!!!">
                 <textarea name="message" id="emailMessage" cols="30" rows="10" placeholder="Message..." required></textarea>
+                
+                <input type="hidden" name="_autoresponse" value="You're email has been recived and I will get back to you as soon as possible. Thank you once again for reaching out.">
+                
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="http://127.0.0.1:5500/pages//thanks.html">
 
                 <button type="submit">Send</button>
             </form>
