--- a/pages/index.html
+++ b/pages/index.html
@@ -377,7 +377,7 @@
                 
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/pages//thanks.html">
+                <input type="hidden" name="_next" value="http://bissle141.github.io/thanks.html">
 
                 <button type="submit">Send</button>
             </form>
