added thankyou page for when email is sent through page

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
 <body>
     <section id="nav-bar">
-        <div id="desktop-nav"> 
+        <nav id="desktop-nav"> 
             <a href="#About">About</a>
             <a href="#Skills">Skills</a>
             <a href="#Projects">Projects</a>
             <a href="#Contact">Contact</a>
-        </div>
+        </nav>
 
         <!-- for phone view, make vis only in phone view and make the others invis -->
-        <div id="phone-nav">
+        <nav id="phone-nav">
             <a href="#About">About</a>
             <a href="#Skills">Skills</a>
             <a href="#Projects">Projects</a>
             <a href="#Contact">Contact</a>
-        </div>
+        </nav>
         
     </section>
 
@@ -377,7 +377,7 @@
                 
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="http://bissle141.github.io/thanks.html">
+                <input type="hidden" name="_next" value="http://bissle141.github.io/pages/thanks.html">
 
                 <button type="submit">Send</button>
             </form>
