started server side

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Coiny">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
 
-    <title>My Portfolio</title>
+    <title>Alyssa Black | Portfolio</title>
 </head>
 
 <body>
